--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,6 @@
-
-
 server:
   port: 8080
 spring:
-  profiles:
-    active: dev
   application:
     name: hmdp
   datasource:
@@ -19,25 +15,14 @@ spring:
 #    database: 10
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
   level:
     com.hmdp: debug
 
-#spring:
-#  profiles:
-#    active: dev
-#  main:
-#    allow-circular-references: true
-#  datasource:
-#    druid:
-#      driver-class-name: ${sky.datasource.driver-class-name}
-#      url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-#      username: ${sky.datasource.username}
-#      password: ${sky.datasource.password}
-#  redis:
-#    host: ${sky.redis.host}
-#    password: ${sky.redis.password}
-#    port: ${sky.redis.port}
-#    database: ${sky.redis.database}
